seafile-ton/seafile/seafile-ingress-ts.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile-tailscale
  namespace: seafile
spec:
  selector:
    app: seafile
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
